modified:   content/posts/20250216-pivot.md

--- a/content/posts/20250216-pivot.md
+++ b/content/posts/20250216-pivot.md
@@ -1,7 +1,7 @@
 +++
 date = '2025-02-16T11:05:30+08:00'
 draft = false
-title = '开源库 simple_chat 推广'
+title = '互联网公司 AI 应用方案'
 +++
 
 我听我一位从事信息安全研究、漏洞研究和分析的朋友提到，他们实验室目前的产出 70% 是靠 AI，这让我有一些焦虑：作为一家普通的互联网行业的软件研发企业，模式还算健康，但是 AI 时代，我们应该怎么拥抱，做出哪些改变？所有角色：财务、HR、运营、市场、研发、风控、产品、客服……应该怎么学习和使用 AI？
